--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -2,8 +2,8 @@
   Localizable.strings
   iCoinTicker
 
-  Created by 알쯔 on 2017. 6. 27..
-  Copyright © 2017년 Moimz. All rights reserved.
+  Created by Arzz on 2017. 6. 27..
+  Copyright © 2017 Moimz. All rights reserved.
 */
 
 menu.about = "About iCoinTicker";
@@ -13,3 +13,5 @@ menu.quit = "Quit";
 
 preferences.toolbar.general = "General";
 preferences.toolbar.coin = "Coins";
+
+preferences.general.startAtLogin = "Start At Login";
