--- a/ko.lproj/Localizable.strings
+++ b/ko.lproj/Localizable.strings
@@ -1,10 +1,10 @@
 /*
- Localizable.strings
- iCoinTicker
+  Localizable.strings
+  iCoinTicker
  
- Created by Arzz on 2017. 6. 27..
- Copyright © 2017 Moimz. All rights reserved.
- */
+  Created by Arzz on 2017. 6. 27..
+  Copyright © 2017 Moimz. All rights reserved.
+*/
 
 menu.about = "iCoinTicker에 관하여";
 menu.hideTicker = "티커에서 숨기기";
@@ -53,8 +53,8 @@ preferences.appearance.fontSize.14pt = "14pt (기본)";
 
 preferences.appearance.displayedCurrency = "통화표시";
 preferences.appearance.displayedCurrency.none = "표시안함";
-preferences.appearance.displayedCurrency.symbol = "기호로 표시 ($)";
-preferences.appearance.displayedCurrency.code = "코드로 표시 (USD)";
+preferences.appearance.displayedCurrency.symbol = "기호로 표시 (₩)";
+preferences.appearance.displayedCurrency.code = "코드로 표시 (KRW)";
 
 preferences.appearance.displayedChanged = "변동율";
 preferences.appearance.showDisplayedChanged = "가격 변동율을 표시합니다. (일부 거래소만 지원)";
@@ -77,3 +77,16 @@ preferences.coin.checkUpdate.true.message = "업데이트된 내역을 적용하
 
 preferences.coin.checkUpdate.false.title = "업데이트 내역이 없습니다.";
 preferences.coin.checkUpdate.false.message = "현재 최신버전의 코인 및 거래소 데이터를 사용하고 있습니다.\n다음에 다시 시도하여 주시기 바랍니다.";
+
+preferences.donation.title = "이 프로그램이 마음에 드신다면, 개발자에게 후원 부탁드립니다.";
+preferences.donation.iap = "인앱결제";
+preferences.donation.iapHelp = "맥 앱스토어 인앱결제를 통하여 선택하신 금액만큼 후원이 가능합니다.";
+
+preferences.donation.success.title = "결제가 성공하였습니다.";
+preferences.donation.success.message = "후원에 감사드리며, 더 멋진 프로그램으로 보답하겠습니다.";
+
+preferences.donation.fail.title = "결제에 실패하였습니다.";
+preferences.donation.fail.message = "애플 앱스토어 계정을 확인하여 주시기 바랍니다.";
+
+preferences.donation.coin = "또는 아래의 주소로 후원이 가능합니다.";
+preferences.donation.coinHelp = "지갑주소를 드래그하거나, 더블클릭하면 주소를 선택할 수 있습니다.";
